修复发送短信bug

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Vue App</title>
-  <link href="/dev/js/app.js" rel="preload" as="script"><link href="/dev/js/chunk-vendors.js" rel="preload" as="script"></head>
+    <meta name="viewport" content="maximum-scale=1.0,minimum-scale=1.0,user-scalable=0,width=device-width,initial-scale=1.0"/>
+    <meta name="format-detection" content="telephone=no,email=no,date=no,address=no">
+    <link rel="icon" href="/favicon.ico">
+    <title>nethelper</title>
+  <link href="/js/app.js" rel="preload" as="script"><link href="/js/chunk-vendors.js" rel="preload" as="script"></head>
   <body>
-    <div id="app"></div>
-  <script type="text/javascript" src="/dev/js/chunk-vendors.js"></script><script type="text/javascript" src="/dev/js/app.js"></script></body>
+    <noscript>
+      <strong>We're sorry but nethelper doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+    </noscript>
+    <div id="app2"></div>
+    <!-- built files will be auto injected -->
+  <script type="text/javascript" src="/js/chunk-vendors.js"></script><script type="text/javascript" src="/js/app.js"></script></body>
 </html>
